# PythonIPC

./: main.py  pyproject.toml  test_client.py  utils.py
pipe_handlers/: linux.py  windows.py
